# bitcoin-tui

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile  openrpc.json
src/: app.rs  format.rs  main.rs  peers_query.rs  rpc.rs  rpc_types.rs  ui.rs  wallet_schema.rs
src/tabs/: dashboard.rs  mempool.rs  method_browser.rs  mod.rs  network.rs  peers.rs  psbt.rs  rpc.rs  transactions.rs  wallet.rs  zmq.rs
